force-app/main/default/objects/Tabla_Index_Price__c/Tabla_Index_Price__c.object-meta.xml
<CustomObject>
    <label>Tabla Index Price</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Correlativo Index Price</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabla Index Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>