force-app/main/default/objects/Tabla_Index_Price__c/fields/Index_Value__c.field-meta.xml
<CustomField>
    <fullName>Index_Value__c</fullName>
    <label>Index Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>