force-app/main/default/objects/Tabla_Index_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Index_Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Date__c</columns>
    <columns>Index_Value__c</columns>
    <columns>Week__c</columns>
    <columns>Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>10/9/2024</value>
    </filters>
    <label>Todos</label>
</ListView>