force-app/main/default/objects/Tabla_Index_Price__c/listViews/Este_a_o.listView-meta.xml
<ListView>
    <fullName>Este_a_o</fullName>
    <columns>NAME</columns>
    <columns>Code_Index_Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Date__c</columns>
    <columns>Index_Value__c</columns>
    <columns>Week__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Code_Index_Price__c</field>
        <operation>contains</operation>
        <value>NAFTA</value>
    </filters>
    <label>This Year</label>
</ListView>