force-app/main/default/objects/Tabla_Index_Price__c/listViews/TODOS_RMB.listView-meta.xml
<ListView>
    <fullName>TODOS_RMB</fullName>
    <columns>NAME</columns>
    <columns>Code_Index_Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Date__c</columns>
    <columns>Index_Value__c</columns>
    <columns>Week__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>CNY</value>
    </filters>
    <label>TODOS RMB</label>
</ListView>